fix(java): Make ResourceReader platform agnostic